--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     
     <h1> Damini's Website </h1>
+    <img src="https://octodex.github.com/images/vinyltocat.png">
     Hello there, awesome person!
     
   </body>
