--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <li> CS 30: Discrete Mathematics for CS </li>
     </ul>
     </p>
+  
+  <p>
+   <a href="https://github.com">This is a link to GitHub!</a>
+  </p>
     
   </body>
   
